--- a/src/data/grammar/mtg/mtg-bug-blog.yaml
+++ b/src/data/grammar/mtg/mtg-bug-blog.yaml
@@ -87,6 +87,7 @@ _bugBlogEntry:
 - "#bugBlogEntrySimple#"
 - "#bugBlogSimpleActionGerund#[_scenario:, #bugBlogSimpleScenario#, #bugBlogSimpleScenario#]#_scenario# #canMayBrokenOrFixed# #bugBlogHugeEffect#"
 - "#bugBlogStandaloneEntry#"
+- "#bugBlogStandaloneEntry#"
 
 bugBlogEntrySimple:
 - "[_when:,,sometimes ,randomly ][_noFunction:#canMayWont# have an effect when cast,#canMayWont# function]#randomInstantOrSorceryCard# #_when##_noFunction#"
@@ -138,7 +139,8 @@ bugBlogBenignAction:
 bugBlogStandaloneEntry:
 - "#bugBlogEntry_winLoseTheGame#"
 - "#bugBlogEntry_nameACard#"
-- "#bugBlogEntery_asymmetrical#"
+- "#bugBlogEntry_asymmetrical#"
+- "#bugBlogEntry_cardsSuchAs#"
 
 bugBlogEntry_winLoseTheGame: "[#cardSearch_winLoseTheGame#]#_cardName# will #bugBlogHugeEffect# instead of #_causingPreventing# a player #_causingTo# #_passiveWinOrLose# the game"
 
@@ -147,8 +149,12 @@ bugBlogEntry_nameACard:
 -  "[#cardSearch_nameACard#]Rather than choosing a card to name with #_cardName#, the name of a card[_zone:hand,library,graveyard,sideboard,collection][_fromWhere: is chosen at random, from #setOrBlock# is chosen at random, is chosen at random from its controller's #_zone#]#_fromWhere#"
 -  "[#cardSearch_nameACard#][_theCard:#_cardName#][_someCard:#_cardName# itself,#randomNonlandCard#][_outcome:the game ends in a draw,#_cardName#'s controller shuffles it into their library,the game can't proceed,repeat this process,both players skip their next main phase,the turn ends]Players can't choose a card to name with #_theCard#. [_doesWhat:Instead#comma# #mtgSomePlayer# exiles the top #count# cards from the top of their library and #_theCard# treats each of those as the named card,Instead#comma# each player must secretl choose a card name. If each player names the same card#comma# #_outcome#,Only #_someCard# can be named,Instead #bugBlogUnexpectedOutcome#]#_doesWhat#"
 
-bugBlogEntery_asymmetrical:
+bugBlogEntry_asymmetrical:
 - "[#cardSearch_eachPlayerStepTrigger#][_card1:#_cardName#][#cardSearch_playersCantX#][_card2:#_cardName#][_card:#_card1#,#_card2#][_affects:only affects,doesn't affect][_randomPlayer:one player#comma# at random,t][_who:its controller,the #activeNonActive# player][_onlyAffects:#_affects# #_who#][_aCounter:#counterType.a#,at least one #counterType#][_sometimeWhen:on every other turn of the game,on the first #count# turns of the game,if both players agree to allow it,if it has #_aCounter# counter on it,if #basicColors# mana was spent to cast it][_hasAnEffect:has an effect,applies,does anything][_sometimeEffect:only has an effect #_sometimeWhen#][_preventsPlayers:prevents players from #bugBlogSimpleActionGerundGeneral#,will prevent players from #bugBlogSimpleActionGerundGeneral#,enables players to #bugBlogSimpleAction#][_arbitraryEffect:#_preventsPlayers#,#_preventsPlayers# #_sometimeWhen#][_effect:#_onlyAffects#,#_sometimeEffect#,#_arbitraryEffect#]#_card# #_effect#"
+
+bugBlogEntry_cardsSuchAs:
+- "[#randomCreatureCategoryCard#][_cardsEither:#_cardCategoryClass# such as #_cardName#,#randomCreatureCard#,either #randomCreatureCard# or #randomCreatureCard#][_cardsBoth:#_cardCategoryClass# such as #_cardName#,#randomCreatureCard#,both #randomCreatureCard# and #randomCreatureCard#][#cardSearch_creatureTrigger#][_triggers:doesn't trigger off of #_cardsEither#,doesn't trigger off of #_cardsEither#,triggers an additional time off of #_cardsBoth#]#_cardName# #_triggers#"
+- "[#randomCreatureCategoryCard#][_cards:#_cardCategoryClass# such as #_cardName#,#randomCreatureCard#,#randomCreatureCard# and #randomCreatureCard#][_cardsOr:#_cardCategoryClass# such as #_cardName#,#randomCreatureCard#,#randomCreatureCard# or #randomCreatureCard#][_cardsAre:#_cardCategoryClass# such as #_cardName# are,#randomCreatureCard# is,#randomCreatureCard# and #randomCreatureCard# are][#cardSearch_permanentGrantsCreatureAbility#][_replacementAbility:#creatureKeyword.lowercase#,#creatureKeyword.lowercase#,#creatureKeyword.lowercase# and #creatureKeyword.lowercase#][_additionalInstance:an additional instance,two additional instances][_triggerEffect:#_cardsAre# not granted #_ability# by #_cardName#,#_cardsAre# granted #_additionalInstance# of #_ability# by #_cardName#,#_cardName# grants #_replacementAbility.lowercase# to #_cards# instead of granting #_ability#,When #_cardsOr# cause #_cardName1# to trigger#comma# it #bugBlogBadSpellResult#]#_triggerEffect#"
 
 bugBlogUnexpectedOutcome:
 - the game ends in a draw
